--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libraries/aJson"]
+[submodule "aJson"]
 	path = libraries/aJson
-	url = https://github.com/interactive-matter/aJson.git
+	url = https://github.com/CE-490/aJson.git
